--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Click==7.0
 Flask==1.0.2
 Flask-MySQL==1.4.0
 flask-restplus==0.11.0
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==3.0.0a3
